option('documentation', type: 'feature',
  description: 'Build documentation')

option('coroutines', type: 'boolean', value: false,
       description: 'Enable C++20 coroutines')

option('static_libcxx', type: 'boolean', value: true,
  description: 'Link libc++/libstdc++ statically')

option('http2', type: 'feature', description: 'HTTP2 protocol support')
option('nfs', type: 'feature', description: 'userspace NFS client')
option('stopwatch', type: 'boolean', value: true, description: 'enable stopwatch support')
option('systemd', type: 'boolean', value: true, description: 'systemd support (using libsystemd)')
option('was', type: 'feature', description: 'WAS support')
option('yaml', type: 'feature', description: 'YAML support (using yaml-cpp)')
option('zeroconf', type: 'feature', description: 'Zeroconf support (using Avahi)')
