option('documentation', type: 'feature',
  description: 'Build documentation')

option('certdb', type: 'boolean', value: true, description: 'Build with certdb support')

option('brotli', type: 'feature', description: 'Brotli support')
option('cap', type: 'feature', description: 'Linux capability support (using libcap)')
option('http2', type: 'feature', description: 'HTTP2 protocol support')
option('io_uring', type: 'feature', description: 'io_uring support using liburing')
option('lua', type: 'feature', description: 'Lua scripting support (using luajit)')
option('seccomp', type: 'feature', description: 'seccomp support (using libseccomp)')
option('stopwatch', type: 'boolean', value: true, description: 'enable stopwatch support')
option('systemd', type: 'feature', description: 'systemd support (using libsystemd)')
option('was', type: 'feature', description: 'WAS support')
option('yaml', type: 'feature', description: 'YAML support (using yaml-cpp)')
option('zeroconf', type: 'feature', description: 'Zeroconf support (using Avahi)')
